Prevent flickering during DnD This was caused by the huge number of MODIFIED events, each refreshing only one thing at a time. A new LAYOUT_MODIFIED event was added which on the client side simply refreshes all things

--- a/static/css/things.css
+++ b/static/css/things.css
@@ -24,6 +24,8 @@
   color: #fff;
   flex-direction: column;
   margin: auto;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #directories {
@@ -54,6 +56,8 @@
   min-height: 50px;
   max-height: 32px;
   overflow: hidden;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .directory.open {
